Fix linktree 111px size on mobile

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -347,8 +347,8 @@ header .header-right a[href*="/all-hallows"]:hover img {
 @media screen and (max-width: 900px) and (orientation: portrait) {
   /* Make Linktree twice as big as other icons */
   header .header-right a[href*="linktr.ee"] img {
-    width: 128px !important;
-    height: 128px !important;
+    width: 111px !important;
+    height: 111px !important;
     animation: linktreeMagicOrganic 9s infinite ease-in-out !important; /* restore animation */
   }
 }
